# SO

M1/: CMakeLists.txt
M1/include/: common.hpp  pgm.hpp
M1/src/: pgm.cpp  sender.cpp  worker.cpp
M1/tmp/: img.pgm  imgt2.pgm
M2/: a.out  main.cpp  memtest
